<resources>
    <string name="app_name">PassWallet</string>
    <string name="initial_category">ADD CATEGORY</string>

    <!-- ###DRAWER###-->
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_main">Main</string>
    <string name="action_tutorial">Tutorial</string>

    <!-- ##IMAGE_DESCRIPTIONS-->
    <string name="app_logo">Application Logo</string>

    <!--###GENERATOR###-->
    <string name="generate_heading">Generate Password</string>
    <string name="generate">Generate</string>
    <string name="master_password_heading">Master password:</string>
    <string name="enter_masterpassword">Please, enter a master password.</string>
    <string name="masterpassword_length">Please, enter at least 8 characters.</string>
    <string name="password">Your password:</string>
    <string name="init_password"></string>
    <string name="done">Done</string>
    <string name="password_copied">Password copied.</string>


    <!--###UPDATE_METADATA###-->
    <string name="characterset">Character set:</string>
    <string name="old_password">Old password:</string>
    <string name="new_password">New password:</string>
    <string name="master_password_description">The master password is required to generate the old and new password.</string>
    <string name="next">Next</string>
    <string name="save">Save</string>

    <string name="old_version">The old password version is %s.</string>
    <string name="new_version">The new version will be </string>
    <string name="added_message">Account updated.</string>
    <string name="canceled_message">Update canceled.</string>

    <string name="add_new_metadata_heading">1. Update account</string>
    <string name="passwords_heading">2. Your passwords</string>

    <string name="copy_clipboar_old">Old password copied.</string>
    <string name="copy_clipboar_new">New password copied.</string>

    <!--###ADD_METADATA###-->
    <string name="placeholder_no_data" translatable="false">-</string>
    <string name="add_metadata_heading">Add new account</string>
    <string name="domain">Account name:</string>
    <string name="username">Username:</string>
    <string name="username_optional">Username (optional):</string>
    <string name="characterset_add">The password will consist of:</string>
    <string name="special_characters">Special (+!#)</string>
    <string name="letters_upper">Uppercase (ABC)</string>
    <string name="letters_lower">Lowercase (abc)</string>
    <string name="numbers">Numbers (123)</string>
    <string name="length">Length: </string>
    <string name="iteration">Version: </string>
    <string name="add_domain_message">Please add an account name.</string>
    <string name="add_character_message">Please choose at least one character type.</string>
    <string name="change_version_closed">▶ Change Version</string>
    <string name="change_version_opened">▼ Change Version</string>
    <string name="current_version">Current password version: </string>

    <string name="add">Add</string>
    <string name="cancel">Cancel</string>

    <!--####VERSION_INFO####-->
    <string name="dialog_version_title">What is a password version?</string>
    <string name="dialog_version">The version of a password is a number that indicates how many passwords an account has had. It is used to generate a different password even if neither the master password
        nor any other data regarding the account is changed.  </string>

    <!-- ###DIALOGS### -->
    <string name="okay">OKAY</string>

    <!-- ###BENCHMARK### -->
    <string name="dialog_start_benchmark">Start</string>
    <string name="dialog_start_benchmark_hint">Please start the benchmark.</string>
    <string name="dialog_benchmark_title">Benchmark</string>
    <string name="dialog_benchmark_seconds">seconds</string>
    <string name="dialog_benchmark_time">The generation will take approximately</string>


    <!-- ##SAMPLE DATA-->
    <string name="sample_domain1">example.email.com</string>
    <string name="sample_username1">example.name@email.com</string>
    <string name="sample_domain2">example-domain.com</string>
    <string name="sample_username2">Model Username</string>
    <string name="sample_domain3"> User PIN example</string>
    <string name="sample_username3">-</string>


    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="appwidget_text">PassWallet</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_settings">Settings</string>

    <string name="delete_dialog">Do you really wish to delete all accounts?</string>
    <string name="delete_dialog_success">All accounts deleted.</string>
    <string name="title_expert_mode">Expert mode</string>
    <string name="title_clipboard">Copy passwords to clipboard</string>
    <string name="summary_clipboard">All other apps will have access to your password on the clipboard.</string>
    <string name="title_reset_list">Delete all accounts</string>
    <string name="title_hash_algorithms">PBKDF2: Hash algorithm</string>
    <string name="default_hash_algorithm" translatable="false">SHA256</string>
    <string-array name="pref_hash_algorithms" translatable="false">
        <item>SHA256</item>
        <item>SHA384</item>
        <item>SHA512</item>
    </string-array>

    <string-array name="pref_iterations" translatable="false">
        <item>1000</item>
        <item>2000</item>
        <item>3000</item>
        <item>4000</item>
        <item>5000</item>
        <item>6000</item>
        <item>7000</item>
        <item>8000</item>
        <item>9000</item>
        <item>10000</item>
    </string-array>

    <string name="default_iterations" translatable="false">2000</string>

    <string name="google_app_id">1:983990540864:android:ca25693db0a957b1</string>
    <string name="github_1"><a href="https://github.com/SrilakshmiMaddali/Capstone_stage1">Github-url-Capstone-Stage-1</a></string>
    <string name="github_2"><a href="https://github.com/SrilakshmiMaddali/Capstone_stage2">Github-url-Capstone-Stage-2</a></string>
    <string name="about">About</string>
    <string name="domain_tv">DOMAIN</string>
    <string name="sample_num">10</string>

    <string name="visibilitybtn_desc">Password visibility button</string>
    <string name="copybtn_desc">Password copy button</string>
    <string name="addcategory_desc">Tap to add new category of password</string>
    <string name="add_new_password_item">Tap to add new category of password</string>
    <string name="right_desc">Right arrow</string>
    <string name="passwordCard_desc">Password card image</string>
    <string name="versioninfo_desc">Version info image button</string>
    <string name="card_view_password_item">Card description of password item</string>

    <string name="str_position">position</string>
    <string name="str_id">id</string>
    <string name="str_hash_algorithm">hash_algorithm</string>
    <string name="str_clipboard_enabled">clipboard_enabled</string>
    <string name="str_bindToDevice_enabled">bindToDevice_enabled</string>
    <string name="str_number_iterations">number_iterations</string>
    <string name="str_hash_iterations">hash_iterations</string>
    <string name="str_entity">entity</string>
    <string name="str_updatedialog_tag">UpdateMetadataDialog</string>
    <string name="str_addMetadata_tag">AddMetaDataDialog</string>
    <string name="str_updatePassword_dialog_tag">UpdatePasswordDialog</string>
    <string name="str_generatepassword_dialog_tag">GeneratePasswordDialog</string>
    <string name="str_olddomain">olddomain</string>
    <string name="str_oldusername">oldusername</string>
    <string name="str_oldlength">oldlength</string>
    <string name="str_oldlettersup">oldlettersup</string>
    <string name="str_oldletterslow">oldletterslow</string>
    <string name="str_oldsymbols">oldsymbols</string>
    <string name="str_oldnumbers">oldnumbers</string>
    <string name="str_olditeration">olditeration</string>
    <string name="str_fetch_succeeded">Fetch Succeeded</string>
    <string name="str_fetch_failed">Fetch Failed</string>
    <string name="str_pref_reset_list">pref_reset_list</string>
</resources>
